--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,16 +65,11 @@
         <h3 id="fitcard-heading" class="card-heading">Create a Fit Card</h3>
         <img id="fitcard-image" class="card-image" src="images/fitcard-image2.jpg" alt="fit card drawing">
         <p id="fitcard-description" class="card-description">
-            Nutricards help you to remain aware and organized of the nutrition you must follow 
-            in order to achieve your goal. Remembering the specifics of what you must eat for 7 
-            different days of the week is impractical, since there's simply too much to remember. 
-            The amount of protein, carbs, and fat, the exact meals that will provide you with 
-            the nutrients you need, what days you should eat what, as well as what time will 
-            give you better results. <br><br>
-            Nutri Cards let you keep it all stored, for easy everyday access. Because 
-            you don't want to have to keep all this important information stored in your Notes 
-            App 😉! Whenever you're ready, try creating your first Nutri Card. Or ask Berry, 
-            our AI, to help create one for you.
+            Fit Cards make planning and tracking workouts fast and repeatable. Create a card for any
+            exercise or routine and record sets, reps, duration, intensity, and form cues so you can
+            follow and improve it over time. Use Fit Cards to schedule sessions, track progression, and
+            quickly reuse your most effective workouts. Need ideas? Ask Berry, our AI, to suggest or
+            customize exercises based on your goals.
         </p>
         <form id="fitcard-form" action="/create/fitcard" method="get">
             <button id="fitcard-button" class="btn1" type="submit">Create Fit Card</button>
