--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,12 +11,12 @@
 </head>
 <body>
     <div id="header-container">
-        <a href="/calendar" class="header-item">Weekly Calendar</a>
         <a href="/create/fitcard" class="header-item">Create Fit Card</a>
         <a href="/create/nutricard" class="header-item">Create Nutri Card</a>
+        <a href="/create/recoverycard" class="header-item">Create Recovery Card</a>
         <a href="/home"><img id="header-logo" class="logo" src="/images/nutri-fit-logo.jpg" alt="NutriFit Logo"></a>
+        <a href="/calendar" class="header-item">Weekly Calendar</a>
         <a href="/ask-berry" class="header-item">Ask Berry</a>
-        <a href="ai-notes" class="header-item">AI Notes</a>
         <a href="/contact" class="header-item">Contact Us</a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
