--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -212,3 +212,47 @@
     height: 50px;
     font-size: 1.4rem;
 }
+
+#recoverycard-container {
+    display: grid;
+    grid-template-rows: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 2fr 2fr;
+    gap: 5px;
+    padding: 0px 10% 0px 10%;
+    align-items: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+    
+#recoverycard-heading {
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+    font-size: 3rem;
+}
+
+#recoverycard-image {
+    grid-row: 2 / 4;
+    grid-column: 3 / 4;
+    max-width: 80%;
+}
+
+#recoverycard-description {
+    grid-row: 2 / 4;
+    grid-column: 2 / 3;
+    font-size: 22px;
+    line-height: 30px;
+    letter-spacing: 0.8px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+#recoverycard-form {
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+}
+
+#recoverycard-button {
+    width: 100%;
+    height: 50px;
+    font-size: 1.4rem;
+}
