AboutUs page. Added images and LinkedIn links to developer cards

--- a/public/styles/about-us.css
+++ b/public/styles/about-us.css
@@ -101,6 +101,11 @@
     color: #666;
 }
 
+.developer-link {
+    text-decoration: none;
+    color: inherit;
+}
+
 /* Contact info – flexbox */
 .contact-info {
     display: flex;
