Create recovery-card table on supabase, and fixed added card logic on index.js

--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -2,7 +2,7 @@
 
 <div id="calendar-container">
     <h1 id="page-title">Calendar</h1>
-    <% if (!locals.nutriCards && !locals.fitCards) { %>
+    <% if (!locals.nutriCards && !locals.fitCards && !locals.recoveryCards) { %>
         <h2 id="empty-calendar">No cards made yet 😢</h2>
     <% } else { %>
     <h2 class="day">Sunday</h2>
