--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -9,26 +9,32 @@
     <div id="sunday-container" class="timeline">
         <% fitCards.forEach(function(card) { %>
             <%  if (card.day === 'Sunday' || card.day === 'sunday') { %>
+                <a href="/details/fit-card/<%= card.id %>">
                 <div class='card fit-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% nutriCards.forEach(function(card) { %>
             <%  if (card.day === 'Sunday' || card.day === 'sunday') { %>
+                <a href="/details/nutri-card/<%= card.id %>">
                 <div class='card nutri-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% recoveryCards.forEach(function(card) { %>
             <%  if (card.day === 'Sunday' || card.day === 'sunday') { %>
+                <a href="/details/recovery-card/<%= card.id %>">
                 <div class='card recovery-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
     </div>
@@ -36,26 +42,32 @@
     <div id="monday-container" class="timeline">
         <% fitCards.forEach(function(card) { %>
             <%  if (card.day === 'Monday' || card.day === 'monday') { %>
+                <a href="/details/fit-card/<%= card.id %>">
                 <div class='card fit-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% nutriCards.forEach(function(card) { %>
             <%  if (card.day === 'Monday' || card.day === 'monday') { %>
+                <a href="/details/nutri-card/<%= card.id %>">
                 <div class='card nutri-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% recoveryCards.forEach(function(card) { %>
-            <%  if (card.day === 'Sunday' || card.day === 'sunday') { %>
+            <%  if (card.day === 'Monday' || card.day === 'monday') { %>
+                <a href="/details/recovery-card/<%= card.id %>">
                 <div class='card recovery-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
     </div>
@@ -64,26 +76,32 @@
     <div id="tuesday-container" class="timeline">
         <% fitCards.forEach(function(card) { %>
             <%  if (card.day === 'Tuesday' || card.day === 'tuesday') { %>
+                <a href="/details/fit-card/<%= card.id %>">
                 <div class='card fit-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% nutriCards.forEach(function(card) { %>
             <%  if (card.day === 'Tuesday' || card.day === 'tuesday') { %>
+                <a href="/details/nutri-card/<%= card.id %>">
                 <div class='card nutri-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% recoveryCards.forEach(function(card) { %>
-            <%  if (card.day === 'Sunday' || card.day === 'sunday') { %>
+            <%  if (card.day === 'Tuesday' || card.day === 'tuesday') { %>
+                <a href="/details/recovery-card/<%= card.id %>">
                 <div class='card recovery-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
     </div>
@@ -92,26 +110,32 @@
     <div id="wednesday-container" class="timeline">
         <% fitCards.forEach(function(card) { %>
             <%  if (card.day === 'Wednesday' || card.day === 'wednesday') { %>
+                <a href="/details/fit-card/<%= card.id %>">
                 <div class='card fit-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% nutriCards.forEach(function(card) { %>
             <%  if (card.day === 'Wednesday' || card.day === 'wednesday') { %>
+                <a href="/details/nutri-card/<%= card.id %>">
                 <div class='card nutri-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% recoveryCards.forEach(function(card) { %>
-            <%  if (card.day === 'Sunday' || card.day === 'sunday') { %>
+            <%  if (card.day === 'Wednesday' || card.day === 'wednesday') { %>
+                <a href="/details/recovery-card/<%= card.id %>">
                 <div class='card recovery-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
     </div>
@@ -120,26 +144,32 @@
     <div id="thursday-container" class="timeline">
         <% fitCards.forEach(function(card) { %>
             <%  if (card.day === 'Thursday' || card.day === 'thursday') { %>
+                <a href="/details/fit-card/<%= card.id %>">
                 <div class='card fit-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% nutriCards.forEach(function(card) { %>
             <%  if (card.day === 'Thursday' || card.day === 'thursday') { %>
+                <a href="/details/nutri-card/<%= card.id %>">
                 <div class='card nutri-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% recoveryCards.forEach(function(card) { %>
-            <%  if (card.day === 'Sunday' || card.day === 'sunday') { %>
+            <%  if (card.day === 'Thursday' || card.day === 'thursday') { %>
+                <a href="/details/recovery-card/<%= card.id %>">
                 <div class='card recovery-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
     </div>
@@ -148,26 +178,32 @@
     <div id="friday-container" class="timeline">
         <% fitCards.forEach(function(card) { %>
             <%  if (card.day === 'Friday' || card.day === 'friday') { %>
+                <a href="/details/fit-card/<%= card.id %>">
                 <div class='card fit-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% nutriCards.forEach(function(card) { %>
             <%  if (card.day === 'Friday' || card.day === 'friday') { %>
+                <a href="/details/nutri-card/<%= card.id %>">
                 <div class='card nutri-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% recoveryCards.forEach(function(card) { %>
-            <%  if (card.day === 'Sunday' || card.day === 'sunday') { %>
+            <%  if (card.day === 'Friday' || card.day === 'friday') { %>
+                <a href="/details/recovery-card/<%= card.id %>">
                 <div class='card recovery-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
     </div>
@@ -176,26 +212,32 @@
     <div id="saturday-container" class="timeline">
         <% fitCards.forEach(function(card) { %>
             <%  if (card.day === 'Saturday' || card.day === 'saturday') { %>
+                <a href="/details/fit-card/<%= card.id %>">
                 <div class='card fit-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% nutriCards.forEach(function(card) { %>
             <%  if (card.day === 'Saturday' || card.day === 'saturday') { %>
+                <a href="/details/nutri-card/<%= card.id %>">
                 <div class='card nutri-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
         <% recoveryCards.forEach(function(card) { %>
             <%  if (card.day === 'Saturday' || card.day === 'saturday') { %>
+                <a href="/details/recovery-card/<%= card.id %>">
                 <div class='card recovery-card'>
                     <h3 class="card-title"><%= card.title %></h3>
                     <h4 class="card-time"><%= card.time %></h4>
                 </div>
+                </a>
             <% } %>
         <% }) %>
     </div>
