--- a/views/card-details.ejs
+++ b/views/card-details.ejs
@@ -60,5 +60,9 @@
         </div>
 
         <a href="/calendar">Back to Calendar</a>
+
+        <form action="/delete/<%= type %>/<%= card.id %>" method="POST" onsubmit="return confirm('Are you sure you want to delete this card?');" style="display: inline-block; margin-left: 10px;">
+            <button type="submit" class="delete-btn">Delete Card</button>
+        </form>
     </div>
     </div>
