--- a/views/card-details.ejs
+++ b/views/card-details.ejs
@@ -18,7 +18,7 @@
                 <div id="meal-container">
                     <p><strong>Meal Base:</strong> <%= card.base %></p>
                     <p><strong>Meal Main:</strong> <%= card.main %></p>
-                    <p><strong>Meal side:</strong> <%= card.veggies %></p>
+                    <p><strong>Meal side:</strong> <%= card.side %></p>
                 </div>
                 <div id="extras-container">
                     <p><strong>extras:</strong> <%= card.extras %></p>
